<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
          android:icon="@drawable/potted_plant"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_your_order"
            android:icon="@drawable/potted_plant"
            android:title="@string/orders" />
        <item
            android:id="@+id/nav_catalog"
            android:icon="@drawable/potted_plant"
            android:title="@string/Catalog" />

        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/potted_plant"
            android:title="@string/payment" />
        <item
            android:id="@+id/nav_return"
            android:icon="@drawable/potted_plant"
            android:title="@string/returnn" />
        <item
            android:id="@+id/nav_promotion"
            android:icon="@drawable/potted_plant"
            android:title="@string/promotion" />

    </group>

    <item android:title="Others">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>