<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="in.gamlasellinghub.com.gamlasellinghub.ExpectedPayoutDetail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:gravity="center_vertical|left"
        android:layout_height="60dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Expected payout through"
            android:textColor="@color/black"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin"
            android:orientation="vertical"
            android:gravity="left"

            android:layout_weight=".7">

            <TextView
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="50dp"
                android:text="@string/mrp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="50dp"
                android:text="@string/SellingPrice"
                />
            <TextView
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="50dp"
                android:text="@string/marketplacecomission"
                />
            <TextView
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="50dp"
                android:text="@string/PaymentGatewayFees"
                />
            <TextView
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="50dp"
                android:text="@string/shippingregionfees"
                />
            <TextView
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="50dp"
                android:text="@string/servicetax"
                />
            <TextView
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="50dp"
                android:text="@string/totaldeduction"
                />
            <TextView
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="50dp"
                android:text="@string/expectedpayout"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:orientation="vertical"
            android:gravity="right"
            android:layout_marginRight="@dimen/margin"
            android:layout_height="match_parent"
            android:layout_weight=".3">

            <TextView
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="50dp"
                android:textColor="@color/black"
                android:text="Rs. 578"
                />
            <TextView
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="50dp"
                android:textColor="@color/black"
                android:text="Rs. 499"
                />
            <TextView
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="50dp"
                android:textColor="@color/black"
                android:text="Rs. 74.85"
                />
            <TextView
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="50dp"
                android:textColor="@color/black"
                android:text="Rs. 13.47"
                />
            <TextView
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="50dp"
                android:textColor="@color/black"
                android:text="Rs. 13.47"
                />
            <TextView
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="50dp"
                android:textColor="@color/black"
                android:text="Rs. 60"
                />
            <TextView
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="50dp"
                android:textColor="@color/black"
                android:text="Rs. 249.57"
                />
            <TextView
                android:layout_width="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:layout_height="50dp"
                android:text="Rs. 328.78"
                />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="left|center_vertical"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Disclaimor: This is only approximation figure based on catagory commisions. Actual charge may vary according to shipment mode and any exclusive commision for your product"
            />




    </LinearLayout>
</LinearLayout>
</ScrollView>