<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:gravity="center"

    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_marginLeft="@dimen/margin"
    android:layout_marginRight="@dimen/margin"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="300dp">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:gravity="left|center_vertical"
        >
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/editquantatity"
    android:layout_marginLeft="@dimen/margin"
    android:textStyle="bold"
    android:textColor="@color/black"
    />
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalstock"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:layout_marginLeft="@dimen/margin"


            />

    <TextView
        android:id="@+id/totalstock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:layout_marginLeft="@dimen/margin"


        />
</LinearLayout>
    </LinearLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/darkergrey"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Warehouse"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="Merchant's location"
                android:gravity="center"

                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stock"
android:layout_marginTop="8dp"
                android:textColor="@color/black"
                />
            <EditText
                android:id="@+id/edttotalstock"
                android:layout_width="50dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="30dp"
                android:text="0"
                android:textColor="@color/darkergrey"
                android:gravity="center"

                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                />
            <Switch
                android:layout_width="50dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="30dp"

                android:checked="true"
                android:textColor="@color/darkergrey"
                android:gravity="center"

                />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Active"
    />

        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="right|center_vertical"
        android:layout_height="50dp"
        >

        <TextView
            android:id="@+id/canceldialog"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/cancel"
            />
        <Button
            android:id="@+id/savediaog"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/margin"

            android:text="@string/save"
            android:background="@color/colorPrimaryDark"
            android:layout_marginRight="@dimen/margin"
            />
    </LinearLayout>

</LinearLayout>

</LinearLayout>