<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="in.gamlasellinghub.com.gamlasellinghub.DahboardFragment">

  <android.support.v7.widget.CardView
      android:layout_width="match_parent"
      android:layout_weight="1"
      app:cardElevation="6dp"
      app:cardCornerRadius="2dp"
      android:layout_marginLeft="6dp"
      android:layout_marginRight="6dp"
      android:layout_marginTop="6dp"

      android:layout_height="0dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/Catalog"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"
        />
    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/chart1"
        android:layout_width="fill_parent"
        android:layout_marginTop="40dp"
        android:tooltipText="@string/totaldeduction"
        android:layout_height="fill_parent" />



  </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_weight="1"
        app:cardElevation="6dp"

        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="6dp"
        app:cardCornerRadius="2dp"
        android:layout_height="0dp">
      <TextView
          android:layout_width="match_parent"
          android:layout_height="40dp"
          android:gravity="center"
          android:text="@string/orders"
          android:textColor="@color/white"
          android:background="@color/colorPrimaryDark"
          />
      <com.github.mikephil.charting.charts.PieChart
          android:id="@+id/chart2"
          android:layout_width="fill_parent"
          android:layout_marginTop="40dp"
          android:layout_height="fill_parent" />

    </android.support.v7.widget.CardView>

</LinearLayout>
